fix: Fixed a bug where in detached window small width size could break the layout

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,6 +5,7 @@
 .layout {
   background-color: var(--semi-color-bg-0);
   padding: 20px;
+  min-width: 400px;
 }
 
 .trending-type {
